--- a/src/html/cart.html
+++ b/src/html/cart.html
@@ -121,7 +121,7 @@
                         <span id="quote_discount">￥0.00</span>
                     </div>
                 </li>
-                <li class="jz"><a href="#">结账</a></li>
+                <li class="jz"><a href="/html/confirm.html">结账</a></li>
             </ul>
         </div>
     </script>
