--- a/src/html/detail.html
+++ b/src/html/detail.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>商品详情</title>
     <link rel="stylesheet" type="text/css" href="/lib/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/header.css">
     <link rel="stylesheet" type="text/css" href="/css/footer.css">
     <link rel="stylesheet" type="text/css" href="/css/detail.css">
 </head>
@@ -65,7 +65,7 @@
                                 <div class="product-shop">
                                     <div class="product_left">
                                         <div class="product-name">
-                                            <span id="pid" style="display: none;">1</span>
+                                            <span id="pid" style="display: none;">15464</span>
                                             <h1 id="pTitle"><a href="#" ></a>【香港直邮】 加拿大  Jamieson 健美生 儿童 鳕鱼肝油软胶囊 100粒</h1>
                                         </div>
 
