--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <title>主页</title>
     <link rel="stylesheet" type="text/css" href="/lib/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/header.css">
     <link rel="stylesheet" type="text/css" href="/css/footer.css">
 </head>
 
@@ -73,12 +74,11 @@
 
             <div class="panic_buying">
                 <div class="bd">
-                    <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                    <ul class="panic_container">
+
                     </ul>
+                    <a class="prev" href="javascript:void(0)"></a>
+                    <a class="next" href="javascript:void(0)"></a>
                 </div>
             </div>
 
@@ -91,12 +91,12 @@
 
             <div class="cplist1">
                 <ul>
-                    <li><a href="#"><img src="/images/pp1.jpg" ></a></li>
-                    <li><a href="#"><img src="/images/pp2.jpg" ></a></li>
-                    <li class="last"><a href="#"><img src="/images/pp3.jpg" ></a></li>
-                    <li><a href="#"><img src="/images/pp4.jpg" ></a></li>
-                    <li><a href="#"><img src="/images/pp5.jpg" ></a></li>
-                    <li class="last"><a href="#"><img src="/images/pp6.jpg" ></a></li>
+                    <li><a href="/html/detail.html"><img src="/images/pp1.jpg" ></a></li>
+                    <li><a href="/html/detail.html"><img src="/images/pp2.jpg" ></a></li>
+                    <li class="last"><a href="/html/detail.html"><img src="/images/pp3.jpg" ></a></li>
+                    <li><a href="/html/detail.html"><img src="/images/pp4.jpg" ></a></li>
+                    <li><a href="/html/detail.html"><img src="/images/pp5.jpg" ></a></li>
+                    <li class="last"><a href="/html/detail.html"><img src="/images/pp6.jpg" ></a></li>
                 </ul>
             </div>
 
@@ -123,65 +123,65 @@
                         Skin Care <br>美妆护肤
                     </div>
                     <div class="layout_block1_2">
-                        <a href="#" target="_blank">眼霜</a>
-                        <a href="#" target="_blank">洁面</a>
-                        <a href="#" target="_blank">精华</a>
-                        <a href="#" target="_blank">面膜</a>
-                        <a href="#" target="_blank">面霜</a>
-                        <a href="#" target="_blank">唇部</a>
+                        <a href="/html/detail.html" target="_blank">眼霜</a>
+                        <a href="/html/detail.html" target="_blank">洁面</a>
+                        <a href="/html/detail.html" target="_blank">精华</a>
+                        <a href="/html/detail.html" target="_blank">面膜</a>
+                        <a href="/html/detail.html" target="_blank">面霜</a>
+                        <a href="/html/detail.html" target="_blank">唇部</a>
                     </div>
                     <div class="layout_block1_3">
-                        <a href="#" target="_blank"><img src="/images/dior.jpg" ></a>
-                        <a href="#" target="_blank"><img src="/images/weizi.jpg" ></a>
-                        <a href="#" target="_blank"><img src="/images/li-de-zi.jpg" ></a>
-                        <a href="#" target="_blank"><img src="/images/snp.jpg" ></a>
-                        <a href="#" target="_blank"><img src="/images/yi-si.jpg" ></a>
-                        <a href="#" target="_blank"><img src="/images/xue-ji-jing.jpg" ></a>
+                        <a href="/html/detail.html" target="_blank"><img src="/images/dior.jpg" ></a>
+                        <a href="/html/detail.html" target="_blank"><img src="/images/weizi.jpg" ></a>
+                        <a href="/html/detail.html" target="_blank"><img src="/images/li-de-zi.jpg" ></a>
+                        <a href="/html/detail.html" target="_blank"><img src="/images/snp.jpg" ></a>
+                        <a href="/html/detail.html" target="_blank"><img src="/images/yi-si.jpg" ></a>
+                        <a href="/html/detail.html" target="_blank"><img src="/images/xue-ji-jing.jpg" ></a>
                     </div>
                 </div>
                 <div class="layout_block2">
                     <div class="layout_block2_box">
                         <div class="show">
-                            <a href="#"  class="active">
+                            <a href="/html/detail.html"  class="active">
                                 <img src="/images/mzhf_01_01.jpg">
                                 <div class="des">360°眼部护理，打造明媚双眸</div>
                             </a>
-                            <a href="#">
+                            <a href="/html/detail.html">
                                 <img src="/images/mzhf_01_02.jpg" >
                                 <div class="des">极致亲肤洁面皂，清洁毛孔 控油抗痘</div>
                             </a>
-                            <a href="#">
+                            <a href="/html/detail.html">
                                 <img src="/images/mzhf_01_03.jpg" >
                                 <div class="des">保湿睡眠面膜，水润焕活肌肤</div>
                             </a>
                         </div>
                         <div class="btn">
-                            <a href="#"><img src="/images/mzhf_02_01.jpg" ></a>
-                            <a href="#"><img src="/images/mzhf_02_02.jpg" ></a>
-                            <a href="#"><img src="/images/mzhf_02_03.jpg" ></a>
+                            <a href="/html/detail.html"><img src="/images/mzhf_02_01.jpg" ></a>
+                            <a href="/html/detail.html"><img src="/images/mzhf_02_02.jpg" ></a>
+                            <a href="/html/detail.html"><img src="/images/mzhf_02_03.jpg" ></a>
                         </div>
                     </div>
                 </div>
                 <div class="layout_block3">
-                    <a href="#">
+                    <a href="/html/detail.html">
                         <img src="/images/c1-3.jpg" >
                         <div class="des">
                             <strong>韩国 HERA  气垫BB霜</strong><br> 提亮肤色 妆容持久
                         </div>
                     </a>
-                    <a href="#">
+                    <a href="/html/detail.html">
                         <img src="/images/c2-1.jpg" >
                         <div class="des">
                             <strong>日本高丝 雪肌精菁华霜</strong><br> 植物精粹，深层滋润肌肤
                         </div>
                     </a>
-                    <a href="#">
+                    <a href="/html/detail.html">
                         <img src="/images/c3.jpg" >
                         <div class="des">
                             <strong>法国依云 纯净矿泉水喷雾</strong><br> 温和舒缓，打造水漾美肌
                         </div>
                     </a>
-                    <a href="#">
+                    <a href="/html/detail.html">
                         <img src="/images/c4.jpg" >
                         <div class="des">
                             <strong>美国伊欧诗 天然植物润唇球</strong><br> 植物滋养，健康润泽
@@ -666,14 +666,34 @@
     </script> -->
 
 <script type="text/javascript" src="lib/requirejs/require.js" data-main="js/index"></script>
+
 <script type="text/html" id="cplist2_temp">
     {{ each products prod }}
         <li>
-            <a href="#">
+            <a href="/html/detail.html">
                 <img src="{{prod.img}}" class="img-responsive"/>
                 <p>{{prod.title1}}<br>{{prod.title2}}</p>
                 <span class="id" style="display:none">{{prod.pid}}</span>
             </a>
+        </li>
+    {{/each}}
+</script>
+
+<script type="text/html" id="panicB_temp">
+    {{ each products prod }}
+        <li class="newRecomItemWrap">
+            <a href="/html/detail.html">
+                <img src="/{{prod.img}}" >
+            </a>
+            <p class="itemTitle"><a href="#">{{prod.title}}</a></p>
+            <div class="itemInfo">
+                <p>
+                    ￥{{prod.price1.toFixed(2)}}
+                    <span class="special_price">￥{{prod.price2.toFixed(2)}}</span>
+                    <a href="#">马上抢</a>
+                </p>
+
+            </div>
         </li>
     {{/each}}
 </script>
