--- a/src/html/login.html
+++ b/src/html/login.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <title>用户登录</title>
     <link rel="stylesheet" type="text/css" href="/lib/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link rel="stylesheet" type="text/css" href="/css/login.css">
+    <link rel="stylesheet" type="text/css" href="/css/header.css">
     <link rel="stylesheet" type="text/css" href="/css/footer.css">
 </head>
 
@@ -22,46 +22,51 @@
         <div class="content_login">
             <div class="login_bigbox">
                 <div class="login_box">
-                    <div class="login_smallbox">
-                        <h2>
-                            <span></span>
-                            <p>用户登录</p>
-                        </h2>
-                        <p style="font-size:12px;margin-top:10px">如果您拥有账户，请登录。</p>
-                        <ul>
-                            <li>
+                    <form class="login_form" action="/php/login.php" method="post">
+                         <div class="login_smallbox">
+                            <h2>
                                 <span></span>
-                                <input type="text" name="" placeholder="邮箱/手机号">
-                            </li>
-                            <li>
-                                <span></span>
-                                <input type="password" name="" placeholder="密码">
-                            </li>
-                        </ul>
-                        <p class="forget">
-                            <a href="#">忘记您的密码？</a>
-                        </p>
-                        <p class="remenber">
-                            <input type="checkbox" />记住我
-                        </p>
-                        <div class="login_button">
-                            <button class="button left"><span>登录</span></button>
-                            <button class="button right"><a href="/html/register.html"><span>注册</span></a></button>
-                        </div>
-                        <p style="margin-top: 10px;display:block;width:100%;float:left">
-                            <a href="#" style="color:#58bae9;">使用贵宾卡号登录</a>
-                        </p>
-                        <div class="socialogin">
-                            <p>使用合作网站登录</p>
-                            <a href="#" title="QQ登录">
-                                <img src="/images/qq_login.png" alt="">
-                            </a>
-                            <a href="#" title="微信登录">
-                                <img src="/images/weixin_login.png" alt="">
-                            </a>
-                        </div>
+                                <p>用户登录</p>
+                            </h2>
+                            <p style="font-size:12px;margin-top:10px">如果您拥有账户，请登录。</p>
+                            <ul>
+                                <li>
+                                    <span></span>
+                                    <input id="phone" type="text" name="phone" placeholder="邮箱/手机号">
+                                    <div class="phone_err"></div>
+                                </li>
+                                <li>
+                                    <span></span>
+                                    <input id ="password" type="password" name="password" placeholder="密码">
+                                    <div class="password_err">这是必填区域。</div>
+                                </li>
+                            </ul>
+                            <p class="forget">
+                                <a href="#">忘记您的密码？</a>
+                            </p>
+                            <p class="remenber">
+                                <input type="checkbox" />记住我
+                            </p>
+                            <div class="login_button">
+                                <button id="dl" class="button left" type="submit"><span>登录</span></button>
+                                <a class="button right" href="/html/register.html"><span>注册</span></a>
+                            </div>
+                            <p style="margin-top: 10px;display:block;width:100%;float:left">
+                                <a href="#" style="color:#58bae9;">使用贵宾卡号登录</a>
+                            </p>
+                            <div class="socialogin">
+                                <p>使用合作网站登录</p>
+                                <a href="#" title="QQ登录">
+                                    <img src="/images/qq_login.png" alt="">
+                                </a>
+                                <a href="#" title="微信登录">
+                                    <img src="/images/weixin_login.png" alt="">
+                                </a>
+                            </div>
 
-                    </div>
+                        </div>
+                    </form>
+
                 </div>
             </div>
         </div>
@@ -77,6 +82,6 @@
         $(".carousel").carousel();
     </script> -->
 
-<script type="text/javascript" src="../lib/requirejs/require.js" data-main="/js/index"></script>
+<script type="text/javascript" src="../lib/requirejs/require.js" data-main="/js/login"></script>
 </body>
 </html>
